<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayoutView"
    android:padding="16dp">

    <EditText
        android:id="@+id/fname"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="6dp"
        android:ems="10"
        android:hint="@string/fname_hint"
        android:inputType="textPersonName"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="6dp" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/fname"
        android:layout_toRightOf="@+id/fname"
        android:ems="10"
        android:hint="@string/lname_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address_hint"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/fname"
        android:autofillHints="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit_btn"
        android:layout_alignParentEnd="true" />
</RelativeLayout>